--- a/.github/workflows/act.yml
+++ b/.github/workflows/act.yml
@@ -4,6 +4,10 @@
 
 name: Act Sample
 on:
+  push:
+    branches: ['main']
+  pull_request:
+    branches: ['main']
   release:
     types: [created]
 jobs:
