--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,8 +24,4 @@ jobs:
         run: yarn install
 
       - name: execute unit test
-        uses: ArtiomTr/jest-coverage-report-action@v2.0-rc.6
-
-        with:
-          working-directory: ./
-          test-script: yarn test
+        run: yarn test
